Removed orderold Replaced old thank you image and page Fixed menu alignment

--- a/thankyou/style.css
+++ b/thankyou/style.css
@@ -150,7 +150,7 @@ header .profile-image:hover {
 
 /*** CARD CSS ***/
 .card {
-    margin: 20px 425px;
+    margin: 20px 40px;
     padding: 20px 40px;
     display: inline-block;
     width: 80%;
@@ -214,113 +214,88 @@ footer ul li {
     padding: 0 5px 0 0;
 }
 
+/*** Order Form ***/
+.required {
+  color: red;
+}
+
+.order-form-heading {
+  font-weight: bold;
+	font-style: italic;
+	border-bottom: 2px solid #ddd;
+	margin-bottom: 20px;
+	font-size: 20px;
+	padding-bottom: 3px;
+}
+
+.order-form label {
+  display: block;
+	margin-bottom: 10px
+}
+
+.order-form label span {
+  width: 100px;
+	font-weight: bold;
+	padding-top: 8px;
+	padding-right: 5px;
+}
+
+.order-form .name-field,
+.order-form .phone-number,
+.order-form .order-field {
+  width: 50%;
+  font-size: 18px;
+  box-sizing: border-box;
+	border: 1px solid #C2C2C2;
+	box-shadow: 1px 1px 4px #EBEBEB;
+	border-radius: 3px;
+	padding: 7px;
+	outline: none;
+}
+
+.order-form .order-field {
+  width: 100%;
+  height: 100px;
+}
+
+.order-form input[type="submit"] {
+  border: 2px solid white;
+	padding: 8px 15px 8px 15px;
+	background: var(--link-hover);
+	color: #fff;
+	box-shadow: 1px 1px 4px black;
+	border-radius: 3px;
+}
+
+.order-form input[type="submit"]:hover {
+  transition: all .5s;
+  background: black;
+}
+
+.center {
+  text-align: center;
+}
+
 /*** COMPUTER (>=720px) CSS ***/
-@media (min-width: 720px) {
+@media (min-width: 1064px) {
 
     .flex {
         flex-direction: row;
         display: inline-flex;
-        min-width: 100%;
+        min-width: 90%;
         max-width: 1200px;
-        justify-content: center;
+        justify-content: flex-start;
         align-items: flex-start;
         align-content: center;
         margin: 40px auto;
         flex-wrap: wrap;
         height: auto;
+        padding: 0 250px;
     }
-
-    /***
-    ***/
-    .form-style-2{
-    	max-width: 500px;
-    	padding: 20px 12px 10px 20px;
-    	font: 13px Arial, Helvetica, sans-serif;
-    }
-    .form-style-2-heading{
-    	font-weight: bold;
-    	font-style: italic;
-    	border-bottom: 2px solid #ddd;
-    	margin-bottom: 20px;
-    	font-size: 15px;
-    	padding-bottom: 3px;
-    }
-    .form-style-2 label{
-    	display: block;
-    	margin: 0px 0px 15px 0px;
-    }
-    .form-style-2 label > span{
-    	width: 100px;
-    	font-weight: bold;
-    	float: left;
-    	padding-top: 8px;
-    	padding-right: 5px;
-    }
-    .form-style-2 span.required{
-    	color:red;
-    }
-    .form-style-2 .tel-number-field{
-    	width: 40px;
-    	text-align: center;
-    }
-    .form-style-2 input.input-field, .form-style-2 .select-field{
-    	width: 48%;
-    }
-    .form-style-2 input.input-field,
-    .form-style-2 .tel-number-field,
-    .form-style-2 .textarea-field,
-     .form-style-2 .select-field{
-    	box-sizing: border-box;
-    	-webkit-box-sizing: border-box;
-    	-moz-box-sizing: border-box;
-    	border: 1px solid #C2C2C2;
-    	box-shadow: 1px 1px 4px #EBEBEB;
-    	-moz-box-shadow: 1px 1px 4px #EBEBEB;
-    	-webkit-box-shadow: 1px 1px 4px #EBEBEB;
-    	border-radius: 3px;
-    	-webkit-border-radius: 3px;
-    	-moz-border-radius: 3px;
-    	padding: 7px;
-    	outline: none;
-    }
-    .form-style-2 .input-field:focus,
-    .form-style-2 .tel-number-field:focus,
-    .form-style-2 .textarea-field:focus,
-    .form-style-2 .select-field:focus{
-    	border: 1px solid #0C0;
-    }
-    .form-style-2 .textarea-field{
-    	height:100px;
-    	width: 55%;
-    }
-    .form-style-2 input[type=submit],
-    .form-style-2 input[type=button]{
-    	border: none;
-    	padding: 8px 15px 8px 15px;
-    	background: var(--link-hover);
-    	color: #fff;
-    	box-shadow: 1px 1px 4px #DADADA;
-    	-moz-box-shadow: 1px 1px 4px #DADADA;
-    	-webkit-box-shadow: 1px 1px 4px #DADADA;
-    	border-radius: 3px;
-    	-webkit-border-radius: 3px;
-    	-moz-border-radius: 3px;
-    }
-    .center{
-      text-align: center;
-    }
-    .form-style-2 input[type=submit]:hover,
-    .form-style-2 input[type=button]:hover{
-    	background: black;
-      transition: all .5s;
-    	color: #fff;
-    }
-    /***
-    ***/
 
     .column {
         height: 100%;
-        width: 50%;
+        width: 100%;
     }
 
     header {
@@ -345,7 +320,7 @@ footer ul li {
 }
 
 /*** PHONE (<720px) CSS ***/
-@media (max-width: 720px) {
+@media (max-width: 1064px) {
 
 	.flex {
         flex-direction: column;
